docs/cmake/debug_aoti_torch_undefined.txt
================================================================================
编译报错定位实录：identifier "aoti_torch_get_current_cuda_stream" is undefined
================================================================================

背景
--------------------------------------------------------------------------------
将 src/inference/fused_qknorm_rope_kernel.cu 加入 validation 可执行目标后，
nvcc 编译报错：

    src/inference/torch_utils.h(82): error:
        identifier "aoti_torch_get_current_cuda_stream" is undefined
        aoti_torch_get_current_cuda_stream(device_index, &stream_ptr)
        ^

    src/inference/torch_utils.h(90): error:
        identifier "torch_get_current_cuda_blas_handle" is undefined
        torch_get_current_cuda_blas_handle(&blas_handle_ptr)
        ^

本文记录从报错到定位、再到解决的完整思路。


================================================================================
一、读懂报错：identifier ... is undefined 意味着什么
================================================================================

    "identifier X is undefined" 是编译器（语义分析）阶段的错误，不是链接错误。
    含义：在使用 X 这个名字的位置，编译器在当前翻译单元里找不到 X 的任何声明。

    据此可立即排除两类原因：
        ✗ 不是链接错误（链接错误是 "undefined reference to X"，发生在 ld 阶段）
        ✗ 不是 X 拼写错误（torch_utils.h 是现成代码，不太可能拼错）

    剩下的核心问题只有一个：
        为什么 X 的声明在这个翻译单元里"不可见"？

    可见性问题通常来自三种情况：
        1. 根本没 #include 声明 X 的头文件
        2. include 了头文件，但头文件搜索路径不对，include 到了错误/旧版本
        3. include 了正确头文件，但 X 的声明被 #if / #ifdef 条件编译屏蔽掉了


================================================================================
二、第 1 步：X 应该在哪里被声明
================================================================================

    aoti_torch_get_current_cuda_stream 是 PyTorch stable ABI（AOTI shim）的 C 接口，
    不是项目自己的函数。先确认 torch_utils.h 是否 include 了它的声明头文件：

        torch_utils.h 第 3 行：
            #include <torch/csrc/inductor/aoti_torch/c/shim.h>

    再到 PyTorch 安装目录里搜索这个符号的声明：

        grep -n "aoti_torch_get_current_cuda_stream" \
            .../torch/include/torch/csrc/inductor/aoti_torch/c/shim.h

        → shim.h:607:
          aoti_torch_get_current_cuda_stream(int32_t device_index, void** ret_stream);

    结论：声明确实存在，且就在 torch_utils.h 已经 include 的那个 shim.h 里。
    → 排除情况 1（没 include）。
    → include 路径也对（${TORCH_INCLUDE_DIRS} 已加入 validation target），排除情况 2。

    那么只剩情况 3：声明被条件编译屏蔽了。


================================================================================
三、第 2 步：查看声明周围的条件编译
================================================================================

    打印 shim.h 中该符号附近的行，连同所有 #ifdef / #endif：

        grep -n "USE_CUDA\|aoti_torch_get_current_cuda_stream" shim.h

        → 578:  #ifdef USE_CUDA
          597:  AOTI_TORCH_EXPORT AOTITorchError aoti_torch_create_cuda_stream_guard(
          607:  aoti_torch_get_current_cuda_stream(int32_t device_index, void** ret_stream);
          618:  #endif // USE_CUDA

    一目了然：函数声明（607）被夹在 #ifdef USE_CUDA（578）和 #endif（618）之间。

        #ifdef USE_CUDA
          ...
          aoti_torch_get_current_cuda_stream(...);   ← 只有定义了 USE_CUDA 才可见
          ...
        #endif // USE_CUDA

    只有在编译时定义了宏 USE_CUDA，预处理器才会保留这段声明；
    否则整段被删掉，编译器自然"找不到这个标识符"。


================================================================================
四、第 3 步：确认 USE_CUDA 在 validation 编译时未被定义
================================================================================

    问：USE_CUDA 这个宏正常由谁定义？
    答：它不是 CUDA Toolkit 或 nvcc 自动定义的宏，而是 PyTorch 构建体系的约定。
        用 torch.utils.cpp_extension（setup.py / load）编译扩展时，PyTorch 会
        自动追加 -DUSE_CUDA；但本项目用纯 CMake 手写构建，不会自动带上它。

    检查本项目 CMakeLists.txt 中 validation target 的编译宏：

        target_compile_definitions(validation ...)   ← 没有 USE_CUDA
        全局 add_compile_options(${TORCH_CXX_FLAGS_LIST})
            TORCH_CXX_FLAGS 只含 -D_GLIBCXX_USE_CXX11_ABI=... 之类，也无 USE_CUDA

    → 确认：validation 编译 fused_qknorm_rope_kernel.cu 时没有定义 USE_CUDA，
      因此 shim.h 中 #ifdef USE_CUDA 段落被整体删除，
      aoti_torch_get_current_cuda_stream 的声明不可见 → 报 "undefined"。

    ROPE_cuda 目标之所以不报这个错，是因为它根本没有 include torch_utils.h，
    不触碰这段被 USE_CUDA 保护的代码。


================================================================================
五、定位结论
================================================================================

    报错链条：

        validation 目标
          └─ 编译 src/inference/fused_qknorm_rope_kernel.cu
               └─ #include "torch_utils.h"
                    └─ #include <.../aoti_torch/c/shim.h>
                         └─ aoti_torch_get_current_cuda_stream 声明
                              位于 #ifdef USE_CUDA ... #endif 内
                              ↑ 编译时未定义 USE_CUDA → 声明被预处理器删除
                                 → "identifier undefined"

    根因一句话：缺少编译宏 USE_CUDA，导致 PyTorch shim 头文件中的
    CUDA 接口声明被条件编译屏蔽。


================================================================================
六、解决方案
================================================================================

    在 CMakeLists.txt 中为 validation 目标显式定义 USE_CUDA 宏：

        target_compile_definitions(validation PRIVATE
            USE_CUDA   # 打开 torch/.../shim.h 中 #ifdef USE_CUDA 包裹的
                       # CUDA stable ABI 接口声明（aoti_torch_get_current_cuda_stream 等），
                       # 否则 torch_utils.h 引用这些符号时报 "identifier undefined"
        )

    重新执行 cmake 配置 + 构建即可消除该报错。


================================================================================
七、第二个报错：torch_get_current_cuda_blas_handle is undefined
================================================================================

    用同样的方法定位 torch_get_current_cuda_blas_handle（torch_utils.h:90）：

        在整个 PyTorch 安装目录里搜索这个符号：

            grep -rn "torch_get_current_cuda_blas_handle" .../torch/include/
            → 无任何结果

    与第一个报错不同：这个符号在当前 PyTorch 头文件中根本不存在，
    不是被条件编译屏蔽，而是压根没有声明。

        本机 PyTorch 版本：2.9.1+cu130
        torch_get_current_cuda_blas_handle 是比 2.9.1 更新的 stable ABI，
        当前版本尚未提供该接口。

    定位区别小结：
        - "声明存在但被 #ifdef 屏蔽" → 定义对应宏即可（如 USE_CUDA）
        - "声明在任何头文件里都搜不到" → API 版本不匹配，不能靠加宏/加路径解决

    解决思路（按需选其一）：
        1. torch_utils.h 中 get_current_cuda_blas_handle() 若未被本项目实际调用，
           直接删除/注释该函数，避免引用不存在的符号；
        2. 升级 PyTorch 到提供该接口的版本。

    本项目 fused_qknorm_rope_kernel.cu 只用到 get_current_cuda_stream，
    不需要 cuBLAS handle，采用方案 1。


================================================================================
八、方法论复盘：identifier undefined 的通用排查顺序
================================================================================

    1. 确认错误类型：编译期 "identifier undefined" ≠ 链接期 "undefined reference"。
       前者是"声明不可见"，后者是"定义找不到"，排查方向完全不同。

    2. 定位声明应在的头文件：grep 符号名，确认它本应在哪个头文件被声明。

    3. 三选一判断不可见的原因：
       a) 没 include          → 加 #include / 加 include 路径
       b) include 到错误版本   → 检查搜索路径优先级、是否有同名旧头文件
       c) 被条件编译屏蔽        → grep 符号附近的 #if/#ifdef，补上对应的编译宏

    4. 若符号在所有头文件中都搜不到 → 是 API 版本问题，不是构建配置问题，
       需改代码或升级依赖，加宏/加路径都无效。

================================================================================
